docs/manifests/frontend-virtual-service-with-weight-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend.apps.SUBDOMAIN
  gateways:
  - istio-system/frontend-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: frontend.project1.svc.cluster.local
        subset: v1
      weight: 100
    - destination:
        port:
          number: 8080
        host: frontend.project1.svc.cluster.local
        subset: v2
      weight: 0
